[package]
name = "karo-common-rpc"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bson = "2.3"
futures = "0.3"
log = "0.4"
serde = "1.0"
tokio = { version = "1.19", features = ["sync", "io-util", "net"] }
tokio-stream = "0.1"

karo-common-connection = { path = "../karo-common-connection" }

[dev-dependencies]
async-trait = "0.1"
bytes = "1.1"
pretty_env_logger = "0.4"
serde = "1.0"
tempdir = "0.3"
tokio = { version = "1.19", features = ["rt-multi-thread", "time"] }
