[package]
name = "karo-common-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-send-fd = { version = "1.0", features = ["tokio"] }
bson = "2.10"
futures = "0.3"
log = "0.4"
serde = "1.0"
tokio = { version = "1.37", features = ["net"] }

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { version = "*", features = ["full", "test-util"] }
