[package]
name = "karo-common-rpc"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/karo-platform/karo-common"
homepage = "https://karo.rs"
description = """
Karo RPC library
"""
categories = ["network-programming"]
keywords = ["rpc"]

[features]
default = []
monitor = []
impl-monitor = ["monitor"]

[dependencies]
anyhow = "1.0"
async-send-fd = { version = "1.0", features = ["tokio"] }
bson = "2.10"
futures = "0.3"
log = "0.4"
once_cell = "1.19"
serde = "1.0"
tokio = { version = "1.37", features = ["net"] }

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1.37", features = ["full", "test-util"] }
karo-common-rpc = { path = ".", features = ["impl-monitor"] }

[package.metadata.docs.rs]
all-features = true
