[package]
name = "krossbar-machine"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-common"
homepage = "https://krossbar.rs"
description = """
Krossbar state machine
"""
categories = ["algorithms"]
keywords = ["state machine"]

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.37", features = ["full", "test-util"] }
