[package]
name = "krossbar-rpc"
version = "0.5.7"
readme = "README.md"
description = """
Krossbar RPC library
"""
categories = ["network-programming"]
keywords = ["rpc"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
monitor = []
impl-monitor = ["monitor"]

[dependencies]
async-send-fd = { version = "1.2", features = ["tokio"] }
bson = "2.10"
futures = { workspace = true }
log = "0.4"
once_cell = "1.19"
serde = "1.0"
tokio = { workspace = true, features = ["net"] }
thiserror = "1.0"

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { workspace = true, features = ["full"] }

krossbar-rpc = { path = ".", features = ["impl-monitor"] }

[package.metadata.docs.rs]
all-features = true
