[package]
name = "krossbar-state-machine"
version = "0.5.4"
readme = "README.md"
description = """
Krossbar state machine
"""
categories = ["algorithms"]
keywords = ["state-machine"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
